--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <div class="banner">
         <div class="navbar">
-          <img src="logo.png" class="logo">
+          <img src="images/logo.png" class="logo">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">bookings</a></li>
+            <li><a href="#">trips</a></li>
+            <li><a href="#">Details</a></li>
+            <li><a href="#">for more info</a></li>
+            <li><a href="#">Why us</a></li>
+            <li><a href="#">contact</a></li>
           </ul>  
         </div>
     </div>
