--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-          <img src="images/logo.png" class="logo">
+          <img src="images/logo.jpg" class="logo">
           <ul>
             <li><a href="#">about</a></li>
             <li><a href="#">bookings</a></li>
