--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-          <img src="images/logo.jpg" class="logo"
+          <img src="images/logoo.jpg" class="logo"
           height="100">
           <ul>
             <li><a href="#">about</a></li>
