changing the text style

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="banner">
         <div class="navbar">
-          <img src="images/logoo.jpg" class="logo"
+          <img src="images/logo.jpg" class="logo"
           height="100">
           <ul>
             <li><a href="#">about</a></li>
-            <li><a href="#">bookings</a></li>
+            <li><a href="#">book</a></li>
             <li><a href="#">trips</a></li>
-            <li><a href="#">Details</a></li>
-            <li><a href="#">for more info</a></li>
-            <li><a href="#">Why us</a></li>
+            <li><a href="#">info</a></li>
             <li><a href="#">contact</a></li>
+            <li><a href="#">Why us</a></li>
+            <li><a href="#">flight</a></li>
           </ul>  
         </div>
     </div>
