providing a text to our home page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <li><a href="#">flight</a></li>
           </ul>  
         </div>
+        <div class="content">
+          <h1>Gravel tours</h1>
+          <p>We make vacations pop with our many travel packages to get you sorted out</p>
+          
+        </div>
     </div>
 </body>
 </html>
