--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         </div>
         <div class="content">
           <h1>Gravel tours</h1>
-          <p>We make vacations pop with our many travel packages to get you sorted out</p>
-          
+          <p>We make vacations pop <br> with our many travel packages to get you sorted out</p>
+          <div>
+            <button type="button">Next</button>
+          </div>
+
         </div>
     </div>
 </body>
