--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1>Gravel tours</h1>
           <p>We make vacations pop <br> with our many travel packages to get you sorted out</p>
           <div>
-            <button type="button">Next</button>
+            <button onclick="document.location='about.html'"  type="button">Next</button>
           </div>
 
         </div>
