added a background image to about page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>abaout</h1>
-    <p></p>
+    <div class="banner">
+        
+    </div>
 </body>
 </html>
