--- a/about.html
+++ b/about.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="banner">
-        
+        <div class="navbar">
+         <img src="logo.jpg" class="logo">
+
+        </div>
     </div>
 </body>
 </html>
