added a directoey to retrieve the logo image from the images folder

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-         <img src="logo.jpg" class="logo">
+         <img src="images/logo.jpg" class="logo">
 
         </div>
     </div>
