changing the context

--- a/about.html
+++ b/about.html
@@ -13,5 +13,10 @@
 
         </div>
     </div>
+    <div class="content">
+        <h1>About</h1>
+        <p>As passionate travel enthusiasts, we keep ourselves abreast of the latest trends and developments in the travel industry</p>
+        
+    </div>
 </body>
 </html>
