changing the context

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="content">
           <h1>Gravel tours</h1>
-          <p>We make vacations pop <br> with our many travel packages to get you sorted out</p>
+          <p> Kenya, our team of dedicated experts possesses the expertise and experience to make your travel dreams come true. Rest assured that we will be by your side</p>
           <div>
             <button onclick="document.location='about.html'"  type="button">Next</button>
           </div>
