--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
         <h1>About</h1>
         <p>As passionate travel enthusiasts, we keep ourselves abreast of the latest trends and developments in the travel industry</p>
         
-    </div>
+    </div><div>
+        <button onclick="document.location='book.html'"  type="button">Next</button>
+      </div>
+
 </body>
 </html>
