adding a button that goes to the next page like a link

--- a/book.html
+++ b/book.html
@@ -24,6 +24,10 @@
                 <label>Password</label>
             </div>
             <button type="Register">Register</button>
+            <button type="button" onclick="location.href='flight.html'">
+            Next page
+            </button>
+
         
         </form>
     </div>
