modified the about button

--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
         &copy; copyright reserved<br>
 
     </footer>
-    <button type="button" onclick="location.href='book.html'"></button>
+    <div>
+        <button type="button" onclick="location.href='book.html'"></button>
+    </div>
+    
 </body>
 </html>
