--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,6 @@
     <h1>Reach out</h1>
 
     <p>You can reach out on 0768636355 for more enquiries</p>
-        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
