adding multiple column layout

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,28 @@
     
 </head>
 <body>
+
+    <style>
+        .my-custom-row{
+            background-color: bisque;
+            height: 120px;
+
+        }
+    </style>
     <div class="container">
-        Reach out
+        <div class="row my-custom-row justify-content-center align-items-center">
+            <div class="col-sm-4"><div class="p-3 border bg-light">Booking services</div></div>
+            <div class="col-sm-6"><div class="p-3 border bg-light">+2547937387281</div></div>
+        </div>
+        <div class="row my-custom-row justify-content-center align-items-center">
+            <div class="col-sm-4"><div class="p-3 border bg-light">consultation</div></div>
+            <div class="col-sm-6"><div class="p-3 border bg-light">+254787878787</div></div>
+        </div>
+        <div class="row my-custom-row justify-content-center align-items-center">
+            <div class="col-sm-4"><div class="p-3 border bg-light">help</div></div>
+            <div class="col-sm-6"><div class="p-3 border bg-light">+254736777363</div></div>
+        </div>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
