--- a/book.html
+++ b/book.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul>
+        <li><a href="#">home</a></li>
+        <li>
+            <a href="#">languages </a>
+            <ul class="dropdown">
+                <li><a href="#">html</a></li>
+                <li><a href="#">css</a></li>
+                <li><a href="#">javascript</a></li>
+                <li><a href="#">php</a></li>
+            </ul>
+        </li>
+        <li><a href="#">about us</a></li>
+        <li><a href="#">contact us</a></li>
+    </ul>
 
     <section>
 
