adding dropdowns to the booking page

--- a/book.html
+++ b/book.html
@@ -10,16 +10,25 @@
     <ul>
         <li><a href="#">home</a></li>
         <li>
-            <a href="#">languages </a>
+            <a href="#">check flights </a>
             <ul class="dropdown">
-                <li><a href="#">html</a></li>
-                <li><a href="#">css</a></li>
-                <li><a href="#">javascript</a></li>
-                <li><a href="#">php</a></li>
+                <li><a href="#">kenya</a></li>
+                <li><a href="#">Tanzania</a></li>
+                <li><a href="#">Rwanda</a></li>
+                <li><a href="#">Burundi</a></li>
             </ul>
         </li>
-        <li><a href="#">about us</a></li>
+        <li>
+            <a href="#">about us</a>
+            <ul class="dropdown">
+                <li><a href="#">motto</a></li>
+                <li><a href="#">Vision</a></li>
+                <li><a href="#">Patners</a></li>
+                <li><a href="#">Board</a></li>
+            </ul>
+        </li>
         <li><a href="#">contact us</a></li>
+        </ul>
     </ul>
 
     <section>
