modifying some buttons

--- a/call.html
+++ b/call.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="table-box">
-<div class="table-row">
+<div class="table-row table-head">
     <div class="table-cell">
         <p>department</p>
     </div>
@@ -19,6 +19,85 @@
         <p>Telephone number</p>
     </div>
 </div>    
+<div class="table-row">
+    <div class="table-cell">
+        <p>business website tutorials</p>
+    </div>
+    <div class="table-cell">
+        <p>flight coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>+25436536635</p>
+    </div>
+</div>  
+<div class="table-row">
+    <div class="table-cell">
+        <p>senior coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>Frank.o</p>
+    </div>
+    <div class="table-cell">
+        <p>+2546736736</p>
+    </div>
+</div>   
+<div class="table-row">
+    <div class="table-cell">
+        <p>senior coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>Frank.o</p>
+    </div>
+    <div class="table-cell">
+        <p>+2546736736</p>
+    </div>
+     
 </div>
+<div class="table-row">
+    <div class="table-cell">
+        <p>senior coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>Frank.o</p>
+    </div>
+    <div class="table-cell">
+        <p>+2546736736</p>
+    </div>
+</div>
+<div class="table-row">
+    <div class="table-cell">
+        <p>senior coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>Frank.o</p>
+    </div>
+    <div class="table-cell">
+        <p>+2546736736</p>
+    </div>
+</div>
+<div class="table-row">
+    <div class="table-cell">
+        <p>senior coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>Frank.o</p>
+    </div>
+    <div class="table-cell">
+        <p>+2546736736</p>
+    </div>
+</div>
+<div class="table-row">
+    <div class="table-cell">
+        <p>senior coordinator</p>
+    </div>
+    <div class="table-cell">
+        <p>Frank.o</p>
+    </div>
+    <div class="table-cell">
+        <p>+2546736736</p>
+    </div>
+    <div>
+        <button onclick="document.location='about.html'"  type="button">Next</button>
+      </div>    
 </body>
 </html>
