--- a/why.html
+++ b/why.html
@@ -18,6 +18,6 @@
         Time Savings: Crafting an itinerary can be challenging if it’s not something you regularly do. Travel agents know how many days to spend in each destination, which tours complement each other, and the best time to visit based on seasonality and your budget.
         Travel Insurance Guidance: Navigating travel insurance policies can be confusing. Travel agents help you choose the best option for your needs, ensuring you’re adequately covered.
         Peace of Mind: With a travel agent handling the details, you can focus on enjoying your vacation without stress or hassle.</p>
-        <button onclick="document.location='contact.html'"  type="button">Next</button>
+        <button onclick="document.location='call.html'"  type="button">Next</button>
 </body>
 </html>
