--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header style="background-color: rgb(243, 157, 157)">
@@ -23,7 +24,7 @@
 
     </footer>
     <div>
-        <button type="button" onclick="location.href='book.html'"></button>
+        <button type="button" onclick="location.href='book.html'">next</button>
     </div>
     
 </body>
