Modified the call page

--- a/call.html
+++ b/call.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>call info</h1>
 <div class="table-box">
 <div class="table-row table-head">
     <div class="table-cell">
@@ -21,10 +22,10 @@
 </div>    
 <div class="table-row">
     <div class="table-cell">
-        <p>business website tutorials</p>
+        <p>Accounts</p>
     </div>
     <div class="table-cell">
-        <p>flight coordinator</p>
+        <p>Peter.W</p>
     </div>
     <div class="table-cell">
         <p>+25436536635</p>
@@ -43,33 +44,22 @@
 </div>   
 <div class="table-row">
     <div class="table-cell">
-        <p>senior coordinator</p>
+        <p>Graphics team</p>
     </div>
     <div class="table-cell">
-        <p>Frank.o</p>
+        <p>Ronald.o</p>
     </div>
     <div class="table-cell">
-        <p>+2546736736</p>
+        <p>+254673673689</p>
     </div>
      
 </div>
 <div class="table-row">
     <div class="table-cell">
-        <p>senior coordinator</p>
+        <p>Head of tourism</p>
     </div>
     <div class="table-cell">
-        <p>Frank.o</p>
-    </div>
-    <div class="table-cell">
-        <p>+2546736736</p>
-    </div>
-</div>
-<div class="table-row">
-    <div class="table-cell">
-        <p>senior coordinator</p>
-    </div>
-    <div class="table-cell">
-        <p>Frank.o</p>
+        <p>Emmanuel.o</p>
     </div>
     <div class="table-cell">
         <p>+2546736736</p>
@@ -77,10 +67,10 @@
 </div>
 <div class="table-row">
     <div class="table-cell">
-        <p>senior coordinator</p>
+        <p>IT dpt</p>
     </div>
     <div class="table-cell">
-        <p>Frank.o</p>
+        <p>Hanks.O.o</p>
     </div>
     <div class="table-cell">
         <p>+2546736736</p>
@@ -88,16 +78,18 @@
 </div>
 <div class="table-row">
     <div class="table-cell">
-        <p>senior coordinator</p>
+        <p>Procurement</p>
     </div>
     <div class="table-cell">
-        <p>Frank.o</p>
+        <p>Jeffery.o</p>
     </div>
     <div class="table-cell">
         <p>+2546736736</p>
     </div>
+</div>
+
     <div>
-        <button onclick="document.location='about.html'"  type="button">Next</button>
+        <button onclick="document.location='contact.html'"  type="button">Next</button>
       </div>    
 </body>
 </html>
