adding collapsible menu to html and css

--- a/info.html
+++ b/info.html
@@ -8,17 +8,24 @@
 </head>
 <body>
     <h1>info</h1>
+    <div class="wrapper">
+        <div class="collapsible">
+            <input type="checkbox" id="collapsible-head">
 
-    <p>Speed: Air travel is the quickest mode of transport for long distances, avoiding geographical obstacles and traffic jams.
-        Affordability: Once considered a luxury, flying is now relatively affordable and often cheaper than other modes of transport like rail.
-        Safety: Flying is one of the safest forms of transport, with significantly lower odds of accidents compared to road travel.
-        Comfort: Despite some discomfort, airplanes offer amenities that allow passengers to read, watch movies, or sleep.
-        Constructive Travel Time: Unlike driving, flying allows passengers to use their travel time for other activities.
-        The Joy of Flying: There is a unique pleasure associated with being in the sky and viewing the world from above.
-        Organized and Professional: The aviation industry is well-organized, offering professional services to travelers.
-        Getting Out of Comfort Zone: Traveling by air can be an adventure, pushing people to experience new things.
-        Jobs and Economic Benefits: The aviation industry creates jobs and contributes to economic growth.
-        Cultural Exchange: Air travel facilitates cultural exchange by making it easier to visit and learn about new places..</p>
+            <label for="collapsible-head">what you need to know about travelling agency</label>
+            <div class="collapsible-text">
+                <h2>Gravel tours</h2>
+                <p>Welcome to Graveltours, the premier travel agency in Kenya dedicated to curating extraordinary travel experiences since 1994. With over two decades of industry expertise, we have earned a reputation for providing top-notch travel services to our valued clients. As an esteemed GTA-certified agency, we hold the key to unlocking the best deals and offers on air tickets, hotels, car rentals, and more, ensuring that you embark on your journey with peace of mind.
+
+                    TAILORED TRAVEL SOLUTIONS FOR EVERY DREAMER
+                    .
+                    
+                    </p>
+            </div>
+        </div>
+    </div>
+
+    
         <button onclick="document.location='why.html'"  type="button">Next</button>
 </body>
 </html>
