adding images to flight

--- a/flight.html
+++ b/flight.html
@@ -9,9 +9,45 @@
 <body>
     <div class="container">
         <div class="slide">
-            <div class="item">
-                
+            <div class="item" style="background-image: url(./images/australia.jpeg);">
+                <div class="content">
+                    <div class="name">Australia</div>
+                    <div class="des">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas animi quia non soluta iusto vel! At asperiores dolore ipsam corporis, expedita fugit blanditiis vitae corrupti, mollitia ab, sed aliquam ratione!</div>
+
+                    <button>See more</button>
+                </div>
+
             </div>
+            <div class="item" style="background-image: url(./images/italy.jpeg);">
+                <div class="content">
+                    <div class="name">italy</div>
+                    <button>See more</button>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam nesciunt dolorem suscipit ex maiores aperiam, fugit commodi, magnam nobis quibusdam quaerat sit excepturi earum incidunt aliquam perspiciatis, iusto quisquam. Doloremque?</div>
+                </div>
+
+            </div>
+            <div class="item" style="background-image: url(./images/hawai.jpeg);">
+                <div class="content">
+                    <div class="name">hawai</div>
+                    <button>See more</button>
+                </div>
+
+            </div>
+            <div class="item" style="background-image: url(./images/istanbul.jpeg);">
+                <div class="content">
+                    <div class="name">istanbul</div>
+                    <button>See more</button>
+                </div>
+
+            </div>
+            <div class="item" style="background-image: url(./images/tour.jpeg);">
+                <div class="content">
+                    <div class="name">tour</div>
+                    <button>See mo0re</button>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
