renamed my images

--- a/flight.html
+++ b/flight.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
     <title>Flight details</title>
     <link rel="stylesheet" href="flight.css">
 </head>
@@ -48,6 +50,11 @@
 
             </div>
 
+        </div>
+
+        <div class="'button">
+            <button class="prev"></button>
+            <button class="next"></button>
         </div>
     </div>
 
