--- a/flight.html
+++ b/flight.html
@@ -18,7 +18,7 @@
                 <div class="content">
                     <div class="name">Europe</div>
                     <div class="des"> Immerse yourself in the rich tapestry of European history with packages that whisk you through ancient ruins in Greece, medieval castles in Germany, and grand palaces in Austria.</div>
-                    <button>See more</button>
+                    <button onclick="document.location='about.html'"  type="button">Next</button>
                 </div>
 
 
@@ -27,7 +27,7 @@
                 <div class="content">
                     <div class="name">South East Asia</div>
                     <div class="des">Pristine beaches and turquoise waters beckon in Southeast Asia. Package deals abound in Thailand, Vietnam, and Indonesia, offering relaxation on the sand and exciting water activities.</div>
-                    <button>See more</button>
+                    <button onclick="document.location='about.html'"  type="button">Next</button>
                 </div>
 
 
@@ -36,7 +36,7 @@
                 <div class="content">
                     <div class="name">Africa</div>
                     <div class="des">Embark on an unforgettable safari adventure in Africa. Packages can take you on thrilling game drives in Kenya, witness the majesty of Victoria Falls in Zambia, or trek through the otherworldly landscapes of Namibia.</div>
-                    <button>See more</button>
+                    <button onclick="document.location='about.html'"  type="button">Next</button>
                 </div>
 
 
@@ -45,7 +45,7 @@
                 <div class="content">
                     <div class="name">Carribean islands</div>
                     <div class="des"> Explore the laid-back island vibes of the Caribbean with all-inclusive packages. From the white sands of the Dominican Republic to the lush rainforests of Dominica, there's a Caribbean island perfect for your beach escape.</div>
-                    <button>See more</button>
+                    <button onclick="document.location='about.html'"  type="button">Next</button>
                 </div>
 
 
@@ -54,7 +54,7 @@
                 <div class="content">
                     <div class="name">middle East</div>
                     <div class="des">Explore the rich history and traditions of the Middle East. Packages can take you to the pyramids of Egypt, the souks of Morocco, or the architectural marvels of Dubai.</div>
-                    <button>See more</button>
+                    <button onclick="document.location='about.html'"  type="button">Next</button>
                 </div>
 
 
@@ -63,7 +63,8 @@
                 <div class="content">
                     <div class="name">Multi country adventure</div>
                     <div class="des">Combine the best of several countries with multi-country travel packages. Explore the ancient wonders of Greece and Turkey, or island hop through the paradises of Fiji and Tahiti.</div>
-                    <button>See more</button>
+                    <button onclick="document.location='about.html'"  type="button">Next</button>
+                    
                 </div>
 
 
@@ -80,5 +81,6 @@
 
 
     <script src="app.js"></script>
+
 </body>
 </html>
