--- a/about.html
+++ b/about.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>Login / Sign Up Form</title>
+    <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header style="background-color: rgb(243, 157, 157)">
-        <h1>About Gravel tours</h1>
-    </header>
-
-    <main>
-        <p> we hold the key to unlocking the best deals and offers on air tickets, hotels, car rentals, and more, ensuring that you embark on your journey with peace of mind.As passionate travel enthusiasts, we keep ourselves abreast of the latest trends and developments in the travel industry. By staying ahead of the curve, we can offer you the most relevant and up-to-date information and advice, ensuring that you make informed decisions when planning your next adventure. Our friendly, professional, and knowledgeable travel and tour managers are well-versed in the intricacies of the destinations we serve. They are equipped with insider insights and insider tips, allowing them to design truly immersive and unforgettable travel experiences tailored to your preferences.</p>
-
-        <p>as a travel agency takes great pride in being one of Kenya’s leading travel agencies, as evidenced by our loyal customer base and numerous accolades for outstanding service and performance. These accolades are a testament to our unwavering commitment to excellence and customer satisfaction. Moreover, we are proud members of various associations and organizations that promote ethical and responsible tourism practice</p>
-        <p>We go above and beyond to ensure that your travel experience exceeds your expectations. From the moment you contact us, our multilingual, knowledgeable, and well-traveled consultants will provide personalized attention, helping you find the best deals, convenient options, and exciting destinations that align with your budget and preferences. Our tour team specializes in creating breathtaking holiday packages and unforgettable safari experiences, catering to a wide range of interests, including adventure, culture, nature, and luxury.</p>
-    </main>
-
-    <footer>
-        <hr>
-        &copy; copyright reserved<br>
-
-    </footer>
-    <div>
-        <button type="button" onclick="location.href='book.html'">next</button>
+<body class="bodyy">
+    <div class="container">
+        <form class="form" id="login">
+            <h1 class="form__title">Login</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Username or email">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="submit">Continue</button>
+            <p class="form__text">
+                <a href="#" class="form__link">Forgot your password?</a>
+            </p>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
+            </p>
+        </form>
+        <form class="form form--hidden" id="createAccount">
+            <h1 class="form__title">Create Account</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Email Address">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="submit">Continue</button>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
+            </p>
+        </form>
     </div>
-    
+    <script src="main.js"></script>
 </body>
-</html>
