changing the next buttons

--- a/call.html
+++ b/call.html
@@ -89,7 +89,7 @@
 </div>
 
     <div>
-        <button onclick="document.location='contact.html'"  type="button">Next</button>
+        <button onclick="document.location='book.html'"  type="button">Next</button>
       </div>    
 </body>
 </html>
