--- a/flight.html
+++ b/flight.html
@@ -63,7 +63,7 @@
                 <div class="content">
                     <div class="name">Multi country adventure</div>
                     <div class="des">Combine the best of several countries with multi-country travel packages. Explore the ancient wonders of Greece and Turkey, or island hop through the paradises of Fiji and Tahiti.</div>
-                    <button onclick="document.location='about.html'"  type="button">Next</button>
+                    <button onclick="document.location='call.html'"  type="button">Next</button>
                     
                 </div>
 
