--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
                 <div class="form__input-error-message"></div>
             </div>
             <button class="form__button" type="submit">Continue</button>
+            <button onclick="document.location='call.html'"  type="button">Next</button>
+
             <p class="form__text">
                 <a href="#" class="form__link">Forgot your password?</a>
             </p>
