creating a form to capture the feedback of the clients

--- a/why.html
+++ b/why.html
@@ -3,21 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flight details</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    
 </head>
-<body>
-    <h1>why we are convenient</h1>
+<body class="bodyyy">
+    <h1 class="h11">User Feedback Form</h1>
+    <form action="" method="post"> <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
 
-    <p>Certainly! Travel agencies offer several advantages that can enhance your travel experience. Here are some key benefits of using a travel agent:
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" required><br><br>
 
-        Expertise: Travel agents specialize in travel planning. Just as you’d hire an electrician for wiring issues or a financial planner for managing money, turning to a travel professional ensures you get expert assistance with your travels. They understand different forms of travel, research important details (such as travel advisories, weather conditions, and required documents), and tailor vacations to your preferences.
-        Cost Savings: Contrary to popular belief, travel agents can often save you money. They have access to special rates, discounts, and promotions. Additionally, the best agents keep an eye on new discounts even after you’ve booked, ensuring you get the best deal.
-        Detailed Itinerary: Travel agents handle every detail of your vacation itinerary. From booking hotel rooms and making dinner reservations to arranging tour tickets, they take care of logistics. You still get to dream up ideas, while they perfect them.
-        Local Expertise: Travel agents have industry connections and relationships that benefit their clients. They can provide access to exclusive experiences not available to the general public. In-destination specialists work exclusively with travel advisors, offering unique, off-the-beaten-path experiences.
-        Time Savings: Crafting an itinerary can be challenging if it’s not something you regularly do. Travel agents know how many days to spend in each destination, which tours complement each other, and the best time to visit based on seasonality and your budget.
-        Travel Insurance Guidance: Navigating travel insurance policies can be confusing. Travel agents help you choose the best option for your needs, ensuring you’re adequately covered.
-        Peace of Mind: With a travel agent handling the details, you can focus on enjoying your vacation without stress or hassle.</p>
-        <button onclick="document.location='call.html'"  type="button">Next</button>
+        <label for="gender">Gender:</label>
+        <input type="radio" id="male" name="gender" value="male" required> Male
+        <input type="radio" id="female" name="gender" value="female" required> Female
+        <br><br>
+
+        <label for="role">Role:</label>
+        <select id="role" name="role" required>
+            <option value="">Select Role</option>
+            <option value="admin">Admin</option>
+            <option value="staff">Staff</option>
+        </select>
+        <br><br>
+
+        <label for="message">Feedback Message:</label>
+        <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
+
+        <button type="submit">Submit Feedback</button>
+    </form>
 </body>
 </html>
